--- a/2013_2019weather.ipynb
+++ b/2013_2019weather.ipynb
@@ -5275,7 +5275,7 @@
       "metadata": {
         "id": "BWulbf0DpMCx",
         "colab_type": "code",
-        "outputId": "468c5c7d-9589-41e5-85f7-736d9b883344",
+        "outputId": "8a500186-b960-4d3e-d5d9-34763d7c3040",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -5285,7 +5285,7 @@
         "weather_data_2018 = pd.read_csv(Weather_url_2018)\n",
         "weather_data_2018.shape"
       ],
-      "execution_count": 94,
+      "execution_count": 134,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5297,7 +5297,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 94
+          "execution_count": 134
         }
       ]
     },
@@ -5306,7 +5306,7 @@
       "metadata": {
         "id": "ldXK6TK4pQlp",
         "colab_type": "code",
-        "outputId": "9f228705-1350-40d6-fe44-99bc15f64b66",
+        "outputId": "4af3fd84-1e7d-459a-b426-f380600e42d9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 428
@@ -5315,7 +5315,7 @@
       "source": [
         "weather_data_2018.head()"
       ],
-      "execution_count": 95,
+      "execution_count": 135,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5681,7 +5681,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 95
+          "execution_count": 135
         }
       ]
     },
@@ -5739,6 +5739,37 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BNhL7uEU058C",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "709c2143-5de9-43ed-b8fb-16475141eec1"
+      },
+      "source": [
+        "Texas2018 = dfweather_data_2018[dfweather_data_2018['STATE'].str.match('TEXAS')]\n",
+        "Texas2018['DAMAGE_PROPERTY'].sum()"
+      ],
+      "execution_count": 140,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "338081250"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 140
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "-1pstyXKyYLU",
@@ -5771,14 +5802,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "d3234616-b730-4cc6-c850-172439011f66"
+        "outputId": "2f4ddbc2-e530-4537-e2f1-5796a8fd3091"
       },
       "source": [
         "#creates a new dataframe\n",
         "df2018 = pd.DataFrame(newdf2018)\n",
         "df2018.head()"
       ],
-      "execution_count": 101,
+      "execution_count": 142,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5848,7 +5879,33 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 101
+          "execution_count": 142
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DN57SAvk13jg",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "13182510-2955-4174-a8ac-e3c0a7bfc300"
+      },
+      "source": [
+        "print(df2018[df2018['STATE'].str.match('TEXAS')])"
+      ],
+      "execution_count": 145,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "    STATE  DAMAGE_PROPERTY\n",
+            "58  TEXAS        338081250\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -5871,12 +5928,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 419
         },
-        "outputId": "b0d74fa4-1e4e-42d5-a310-eb386c689006"
+        "outputId": "82be40c6-f0d7-4841-c4f3-74568e0c2ef8"
       },
       "source": [
-        "df2018.sort_values(by='DAMAGE_PROPERTY', ascending=False)"
+        "df2018.sort_values(by='DAMAGE_PROPERTY', ascending=True)"
       ],
-      "execution_count": 114,
+      "execution_count": 143,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5906,29 +5963,29 @@
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>7</th>\n",
-              "      <td>CA</td>\n",
-              "      <td>19235667900</td>\n",
+              "      <th>25</th>\n",
+              "      <td>LAKE ERIE</td>\n",
+              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>13</th>\n",
-              "      <td>FL</td>\n",
-              "      <td>4209301160</td>\n",
+              "      <th>18</th>\n",
+              "      <td>HAWAII WATERS</td>\n",
+              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>46</th>\n",
-              "      <td>ND</td>\n",
-              "      <td>2024526458</td>\n",
+              "      <th>61</th>\n",
+              "      <td>VIRGIN ISLANDS</td>\n",
+              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>14</th>\n",
-              "      <td>GA</td>\n",
-              "      <td>1545984010</td>\n",
+              "      <th>6</th>\n",
+              "      <td>ATLANTIC SOUTH</td>\n",
+              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>8</th>\n",
-              "      <td>CO</td>\n",
-              "      <td>669220000</td>\n",
+              "      <th>56</th>\n",
+              "      <td>ST LAWRENCE R</td>\n",
+              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>...</th>\n",
@@ -5936,29 +5993,29 @@
               "      <td>...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>61</th>\n",
-              "      <td>WA</td>\n",
-              "      <td>0</td>\n",
+              "      <th>8</th>\n",
+              "      <td>COLORADO</td>\n",
+              "      <td>669220000</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>28</th>\n",
-              "      <td>Lake st clair</td>\n",
-              "      <td>0</td>\n",
+              "      <th>14</th>\n",
+              "      <td>GEORGIA</td>\n",
+              "      <td>1545984010</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>6</th>\n",
-              "      <td>Atlantic south</td>\n",
-              "      <td>0</td>\n",
+              "      <th>46</th>\n",
+              "      <td>NORTH CAROLINA</td>\n",
+              "      <td>2024526458</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>29</th>\n",
-              "      <td>Lake superior</td>\n",
-              "      <td>0</td>\n",
+              "      <th>13</th>\n",
+              "      <td>FLORIDA</td>\n",
+              "      <td>4209301160</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>30</th>\n",
-              "      <td>LA</td>\n",
-              "      <td>0</td>\n",
+              "      <th>7</th>\n",
+              "      <td>CALIFORNIA</td>\n",
+              "      <td>19235667900</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -5967,17 +6024,17 @@
             ],
             "text/plain": [
               "             STATE  DAMAGE_PROPERTY\n",
-              "7               CA      19235667900\n",
-              "13              FL       4209301160\n",
-              "46              ND       2024526458\n",
-              "14              GA       1545984010\n",
-              "8               CO        669220000\n",
+              "25       LAKE ERIE                0\n",
+              "18   HAWAII WATERS                0\n",
+              "61  VIRGIN ISLANDS                0\n",
+              "6   ATLANTIC SOUTH                0\n",
+              "56   ST LAWRENCE R                0\n",
               "..             ...              ...\n",
-              "61              WA                0\n",
-              "28   Lake st clair                0\n",
-              "6   Atlantic south                0\n",
-              "29   Lake superior                0\n",
-              "30              LA                0\n",
+              "8         COLORADO        669220000\n",
+              "14         GEORGIA       1545984010\n",
+              "46  NORTH CAROLINA       2024526458\n",
+              "13         FLORIDA       4209301160\n",
+              "7       CALIFORNIA      19235667900\n",
               "\n",
               "[67 rows x 2 columns]"
             ]
@@ -5985,7 +6042,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 114
+          "execution_count": 143
         }
       ]
     },
@@ -6080,12 +6137,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "172966e8-c22f-4a4f-ae03-78b7be9d737d"
+        "outputId": "7a811368-7458-4643-9439-392abd2d69d9"
       },
       "source": [
         "df2018.head()"
       ],
-      "execution_count": 109,
+      "execution_count": 148,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6116,27 +6173,27 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>AL</td>\n",
+              "      <td>ALABAMA</td>\n",
               "      <td>8340450</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>AK</td>\n",
+              "      <td>ALASKA</td>\n",
               "      <td>3589000</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>American samoa</td>\n",
+              "      <td>AMERICAN SAMOA</td>\n",
               "      <td>50137000</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>AZ</td>\n",
+              "      <td>ARIZONA</td>\n",
               "      <td>67453000</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>AR</td>\n",
+              "      <td>ARKANSAS</td>\n",
               "      <td>19823000</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
@@ -6145,17 +6202,44 @@
             ],
             "text/plain": [
               "            STATE  DAMAGE_PROPERTY\n",
-              "0              AL          8340450\n",
-              "1              AK          3589000\n",
-              "2  American samoa         50137000\n",
-              "3              AZ         67453000\n",
-              "4              AR         19823000"
+              "0         ALABAMA          8340450\n",
+              "1          ALASKA          3589000\n",
+              "2  AMERICAN SAMOA         50137000\n",
+              "3         ARIZONA         67453000\n",
+              "4        ARKANSAS         19823000"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 109
+          "execution_count": 148
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KNNzMnfn2MPd",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "40f42edf-1ad3-4339-912c-5b9b4573e5b2"
+      },
+      "source": [
+        "print(df2018[df2018['STATE'].str.match('TX')])"
+      ],
+      "execution_count": 149,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Empty DataFrame\n",
+            "Columns: [STATE, DAMAGE_PROPERTY]\n",
+            "Index: []\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -6296,7 +6380,7 @@
       "metadata": {
         "id": "PAZyQRaQsHsQ",
         "colab_type": "code",
-        "outputId": "0aa84574-5e2d-47e4-baa1-99d95737a0c0",
+        "outputId": "3283d817-b2b7-4a1f-d433-1303d8192c0c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -6306,7 +6390,7 @@
         "weather_data_2019 = pd.read_csv(Weather_url_2019)\n",
         "weather_data_2019.shape"
       ],
-      "execution_count": 0,
+      "execution_count": 116,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6318,7 +6402,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 133
+          "execution_count": 116
         }
       ]
     },
@@ -6327,7 +6411,7 @@
       "metadata": {
         "id": "l1oCnLWPsMVk",
         "colab_type": "code",
-        "outputId": "30a40ef1-baac-437f-bf7d-02266aea133b",
+        "outputId": "9f4b798d-92c2-4cd9-ad1f-9323c0899e42",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 428
@@ -6336,7 +6420,7 @@
       "source": [
         "weather_data_2019.head()"
       ],
-      "execution_count": 0,
+      "execution_count": 117,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6702,7 +6786,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 134
+          "execution_count": 117
         }
       ]
     },
@@ -6764,29 +6848,29 @@
       "metadata": {
         "id": "YIjetN5dEFN9",
         "colab_type": "code",
-        "outputId": "5572f928-ab08-49c7-a32b-9c5b65eed9f5",
+        "outputId": "19c39c10-6dff-4dc0-b81c-f08032b9f3c1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
         }
       },
       "source": [
-        "Texas2019 = dfweather_data_2019[dfweather_data_2019['STATE'].str.match('TEXAS')]\n",
-        "Texas2019['DAMAGE_PROPERTY'].sum()"
+        "Texas2018 = dfweather_data_2018[dfweather_data_2018['STATE'].str.match('TEXAS')]\n",
+        "Texas2018['DAMAGE_PROPERTY'].sum()"
       ],
-      "execution_count": 0,
+      "execution_count": 129,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "3093746900"
+              "338081250"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 139
+          "execution_count": 129
         }
       ]
     },
