--- a/2013_2019weather.ipynb
+++ b/2013_2019weather.ipynb
@@ -6844,6 +6844,39 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5uNrVTdd3y40",
+        "colab_type": "text"
+      },
+      "source": [
+        "**State Totals**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "R1CCWCws34FX",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NJ1d-Y6834oZ",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Helper code**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "YIjetN5dEFN9",
@@ -6855,6 +6888,7 @@
         }
       },
       "source": [
+        "#indivually calculates the sum for a state if you want to double check to make sure an idivual state has the right numbers\n",
         "Texas2018 = dfweather_data_2018[dfweather_data_2018['STATE'].str.match('TEXAS')]\n",
         "Texas2018['DAMAGE_PROPERTY'].sum()"
       ],
