--- a/2013_2019weather.ipynb
+++ b/2013_2019weather.ipynb
@@ -7375,11 +7375,34 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "2Prk8BeE6XxX",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Comparing years together**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "H43MIPbr6ntO",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "NJ1d-Y6834oZ",
         "colab_type": "text"
       },
       "source": [
-        "**Helper code**"
+        "# **Helper code**"
       ]
     },
     {
