--- a/2013_2019weather.ipynb
+++ b/2013_2019weather.ipynb
@@ -8508,208 +8508,213 @@
       "metadata": {
         "id": "0-UX53dwISvd",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "2f6525f8-175e-4d7a-e3da-ddfc0660404f"
+        "colab": {}
       },
       "source": [
-        "df2019['DAMAGE_PROPERTY'].sum()"
+        "TotalDamage2019 = df2019['DAMAGE_PROPERTY'].sum()"
       ],
-      "execution_count": 283,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "6202923198"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 283
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "sWuRAaVBIyU9",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "2fba8289-9a1e-4ab6-e898-eb58328426e4"
+        "colab": {}
       },
       "source": [
-        "df2018['DAMAGE_PROPERTY'].sum()"
+        "TotalDamage2018 = df2018['DAMAGE_PROPERTY'].sum()"
       ],
-      "execution_count": 284,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "29908586095"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 284
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "5-Asel3LI0nk",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "cb575e89-ed84-4c42-baa3-33244c80c5f8"
+        "colab": {}
       },
       "source": [
-        "df2017['DAMAGE_PROPERTY'].sum()"
+        "TotalDamage2017 = df2017['DAMAGE_PROPERTY'].sum()"
       ],
-      "execution_count": 285,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "80414491929"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 285
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "GewtSM2pI3ek",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "1d514032-2d6c-4a9a-9b69-c04643eba85f"
+        "colab": {}
       },
       "source": [
-        "df2016['DAMAGE_PROPERTY'].sum()"
+        "TotalDamage2016 = df2016['DAMAGE_PROPERTY'].sum()"
       ],
-      "execution_count": 286,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "18224007427"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 286
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "tTVdydrJI6OQ",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "659fc260-012a-4610-82b8-58338c5430be"
+        "colab": {}
       },
       "source": [
-        "df2015['DAMAGE_PROPERTY'].sum()"
+        "TotalDamage2015 = df2015['DAMAGE_PROPERTY'].sum()"
       ],
-      "execution_count": 287,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "4447678887"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 287
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "SzZ70P0bI-_m",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "dc018f12-1a31-43e0-f80f-b8c70976f296"
+        "colab": {}
       },
       "source": [
-        "df2014['DAMAGE_PROPERTY'].sum()"
+        "TotalDamage2014 = df2014['DAMAGE_PROPERTY'].sum()"
       ],
-      "execution_count": 288,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "5512720389"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 288
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "w3BoTYP_JAfl",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "3840c244-6de5-4c80-fcfa-686c595477b0"
+        "colab": {}
       },
       "source": [
-        "df2013['DAMAGE_PROPERTY'].sum()"
+        "TotalDamage2013 = df2013['DAMAGE_PROPERTY'].sum()"
       ],
-      "execution_count": 289,
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZZFdGBuZRKL_",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 80
+        },
+        "outputId": "852c2002-f4b3-4bb9-a28d-e97bfab1b8b7"
+      },
+      "source": [
+        "d = {'2019': [TotalDamage2019], '2018': [TotalDamage2018],'2017': [TotalDamage2017],'2016': [TotalDamage2016],'2015': [TotalDamage2015],'2014': [TotalDamage2014], '2013': [TotalDamage2013]}\n",
+        "dfTotals = pd.DataFrame(data=d)\n",
+        "dfTotals"
+      ],
+      "execution_count": 309,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>2019</th>\n",
+              "      <th>2018</th>\n",
+              "      <th>2017</th>\n",
+              "      <th>2016</th>\n",
+              "      <th>2015</th>\n",
+              "      <th>2014</th>\n",
+              "      <th>2013</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>6202923198</td>\n",
+              "      <td>29908586095</td>\n",
+              "      <td>80414491929</td>\n",
+              "      <td>18224007427</td>\n",
+              "      <td>4447678887</td>\n",
+              "      <td>5512720389</td>\n",
+              "      <td>8818388050</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
             "text/plain": [
-              "8818388050"
+              "         2019         2018         2017  ...        2015        2014        2013\n",
+              "0  6202923198  29908586095  80414491929  ...  4447678887  5512720389  8818388050\n",
+              "\n",
+              "[1 rows x 7 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 289
+          "execution_count": 309
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tIbdG8AZOhgn",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 129
+        },
+        "outputId": "abb5eeb3-559b-4155-be61-624f5872af52"
+      },
+      "source": [
+        "fig, ax = plt.subplots()\n",
+        "\n",
+        "# Figure background color\n",
+        "fig.patch.set(facecolor=\"white\")\n",
+        "\n",
+        "# Set the bars\n",
+        "ax.bar(x=range(1,11), height=dfTotals[], width=0.9, color=\"#ED713A\")\n",
+        "\n",
+        "# Axes background color\n",
+        "ax.set(facecolor=\"white\")\n",
+        "\n",
+        "# Set the x and y axes labels\n",
+        "ax.set_xlabel(\"Damage Cost USD\", fontsize=10, fontweight='bold')\n",
+        "ax.set_ylabel(\"Years\", fontsize=10, fontweight='bold')\n",
+        "\n",
+        "# Fix the x an y axis tick marks and grid\n",
+        "ax.set_xticklabels(range(1,11), rotation=0)\n",
+        "ax.set_xticks(range(1,11))\n",
+        "ax.set_yticklabels(range(0,50,10))\n",
+        "ax.set_yticks(range(0,50,10));\n",
+        "\n"
+      ],
+      "execution_count": 312,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-312-e488b46b4371>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    ax.bar(x=range(1,11), height=dfTotals[], width=0.9, color=\"#ED713A\")\u001b[0m\n\u001b[0m                                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
         }
       ]
     },
