--- a/2013_2019weather.ipynb
+++ b/2013_2019weather.ipynb
@@ -9018,7 +9018,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# **Helper code**"
+        "# **Helper code some was just test code**"
       ]
     },
     {
